# blog-content-automation

./: .commitlintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.husky/: commit-msg  husky.sh  prepare-commit-msg
app/: main.py
app/api/: main.py
app/api/routes/: file_api.py  health_api.py  period_report_api.py  summarize_api.py  thumbnail_api.py  upload_api.py  weekly_report_api.py
app/core/: config.py  db.py  error_codes.py  exception_handlers.py  exceptions.py  init_db.py
app/models/: pdf_models.py
app/prompts/: brief_summary_prompt.j2  period_report_prompt.j2  summary_prompt.j2  thumbnail_prompt.j2
app/repositories/: pdf_repository.py
app/schemas/: file.py  thumbnail.py  upload.py
app/services/: file_service.py  period_report_service.py  summarize_service.py  thumbnail_service.py  upload_service.py  weekly_report_service.py
app/utils/: date_parser_utils.py  file_cleanup_utils.py  pdf_refiner.py  pdf_splitter.py  pdf_utils.py  period_report_utils.py  prompt_utils.py  storage_utils.py  summarization_utils.py  weekly_report_utils.py
output/refined_posts/블로그-1/001-004_2720438/: 001-004_2720438.json
output/refined_posts/블로그-1/005-006_3846759/: 005-006_3846759.json
output/refined_posts/블로그-1/007-019_6335792/: 007-019_6335792.json
output/refined_posts/블로그-1/020-024_3711223/: 020-024_3711223.json
output/refined_posts/블로그-1/025-034_9552904/: 025-034_9552904.json
output/refined_posts/블로그-1/035-039_9330606/: 035-039_9330606.json
(+91 files in other folders)
